- fix compiler and maven build warnings